files-to-index/6110-sp24-main/src/snapshots/decaf_rust__tokenizer__tests__tokenizer@J1xcJw==.snap
---
source: src/tokenizer.rs
description: "Tokenizing '\\\\'"
expression: tokenize(input.to_string())
---
Ok:
  - token:
      CharLiteral: "\\"
    span:
      start:
        index: 0
        line: 1
        col: 0
      end:
        index: 4
        line: 1
        col: 4
