files-to-index/6110-sp24-main/src/snapshots/decaf_rust__tokenizer__tests__tokenizer@J1xuJw==.snap
---
source: src/tokenizer.rs
description: "Tokenizing '\\n'"
expression: tokenize(input.to_string())
---
Ok:
  - token:
      CharLiteral: "\n"
    span:
      start:
        index: 0
        line: 1
        col: 0
      end:
        index: 4
        line: 1
        col: 4
