files-to-index/6110-sp24-main/src/snapshots/decaf_rust__tokenizer__tests__tokenizer@J211bHQn.snap
---
source: src/tokenizer.rs
description: "Tokenizing 'mult'"
expression: tokenize(input.to_string())
---
Err:
  message: "unterminated character literal; expected '"
  pos:
    index: 2
    line: 1
    col: 2
  code_error_line: "'mult'"
