files-to-index/6110-sp24-main/src/snapshots/decaf_rust__tokenizer__tests__tokenizer@J2En.snap
---
source: src/tokenizer.rs
description: "Tokenizing 'a'"
expression: tokenize(input.to_string())
---
Ok:
  - token:
      CharLiteral: a
    span:
      start:
        index: 0
        line: 1
        col: 0
      end:
        index: 3
        line: 1
        col: 3
