files-to-index/6110-sp24-main/src/snapshots/decaf_rust__tokenizer__tests__tokenizer@MHgxMjNoZWxsbw==.snap
---
source: src/tokenizer.rs
description: Tokenizing 0x123hello
expression: tokenize(input.to_string())
---
Ok:
  - token:
      IntLiteralHex: 123hello
    span:
      start:
        index: 0
        line: 1
        col: 0
      end:
        index: 10
        line: 1
        col: 10
